# dr-huatuo

./: .gitignore  CLAUDE.md  Makefile  README.md  bugsinpy_analysis.py  bugsinpy_extract.py  cli.py  code_analyzer.py  code_reporter.py  dataset_annotator.py  dataset_dedup.py  example_code.py  package-lock.json  package.json  pyproject.toml  quality_profile.py  scoring_optimizer.py  tools_integration_reference.md
.team/: codex-prompt.txt
incomings/: chatgpt-research-report.md
rules/: HUA-0000-REF-Document-Index.md  HUA-2000-REF-Project-Overview.md  HUA-2001-CHG-Initialize-Version-Control.md  HUA-2100-PRP-Add-Test-Infrastructure.md  HUA-2101-ADR-English-Only-Codebase.md  HUA-2102-CHG-Add-Test-Infrastructure.md  HUA-2103-CHG-Fix-Ruff-Violations-In-Source-Code.md  HUA-2104-SOP-Workflow-Routing-PRJ.md  HUA-2105-CHG-Fix-Type-Errors.md  HUA-2106-CHG-Reduce-Complexity-Hotspots.md  HUA-2107-CHG-Suppress-Example-Code-Security-Warnings.md  HUA-2108-CHG-Restore-Accidentally-Deleted-example_code.py.md  HUA-2109-PRP-Dataset-Annotation-Pipeline.md  HUA-2110-REF-Code-Quality-Metrics-Framework.md  HUA-2111-REF-External-Research:-Code-Quality-Metrics-Responses.md  HUA-2112-REF-External-Research:-Existing-Code-Quality-Tools-Survey.md  HUA-2113-PRP-Dataset-Deduplication-Pipeline.md  HUA-2114-CHG-Implement-Dataset-Annotator.md  HUA-2115-CHG-Implement-Dataset-Deduplicator.md  HUA-2116-PRP-BugsInPy-Pipeline-Validation.md  HUA-2117-CHG-Implement-BugsInPy-Pipeline-Validation.md  HUA-2118-PRP-AutoResearch-Skill-Integration.md  HUA-2119-PRP-AutoResearch-LLM-Prompt-Optimization.md  HUA-2120-CHG-Implement-Scoring-Formula-Optimizer.md  HUA-2121-REF-ML-Baseline-Experiment-Results.md  HUA-2125-CHG-Implement-Unified-CLI.md  (+15 more)
(+32 files in other folders)
